--- a/src/views/pages/compare-review.html
+++ b/src/views/pages/compare-review.html
@@ -90,43 +90,55 @@
                                             </div>
                                             <div class="text-item">
                                                 <h5 class="title-text">
-                                                    가격
+                                                    방문도시  
                                                 </h5>
-                                                <p>성인 200,000 원 </p>
-                                                <p>원 아동 150,000</p>
-                                                <p> 유아 100,000 원</p>
+                                                <p>오사카 </p>
                                             </div>
                                             <div class="text-item">
                                                 <h5 class="title-text">
-                                                    가격
+                                                    항공    
                                                 </h5>
-                                                <p>성인 200,000 원 </p>
-                                                <p>원 아동 150,000</p>
-                                                <p> 유아 100,000 원</p>
+                                               <p>이스타항공</p>
                                             </div>
                                             <div class="text-item">
                                                 <h5 class="title-text">
-                                                    가격
+                                                    일정     
                                                 </h5>
-                                                <p>성인 200,000 원 </p>
-                                                <p>원 아동 150,000</p>
-                                                <p> 유아 100,000 원</p>
+                                                <p>2박3일</p>
                                             </div>
                                             <div class="text-item">
                                                 <h5 class="title-text">
-                                                    가격
+                                                    출국   
                                                 </h5>
-                                                <p>성인 200,000 원 </p>
-                                                <p>원 아동 150,000</p>
-                                                <p> 유아 100,000 원</p>
+                                                <p>7월 22일</p>
+                                                <p>(월) 오전 08:45 </p>
+                                                <p>인천/김포 출발</p>
                                             </div>
                                             <div class="text-item">
                                                 <h5 class="title-text">
-                                                    가격
+                                                    귀국 
                                                 </h5>
-                                                <p>성인 200,000 원 </p>
-                                                <p>원 아동 150,000</p>
-                                                <p> 유아 100,000 원</p>
+                                                <p>7월 24일 (수)</p>
+                                                <p>오전 08:45</p>
+                                                <p>인천/김포 도착</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    쇼핑 
+                                                </h5>
+                                                <p>노쇼핑   </p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    인솔자 
+                                                </h5>
+                                                <p>없음</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    여행사  
+                                                </h5>
+                                                <p>투어2000</p>
                                             </div>
                                         </div>
                                         <div class="gr-button">
@@ -135,73 +147,85 @@
                                         </div>
                                     </div>
                                     <div class="item">
-                                            <div class="top-item">
-                                                <div class="img-box">
-                                                    <a href="">
-                                                        <img src="./images/background/box-01.png" alt="">
-                                                    </a>
-                                                </div>
-                                                <div class="date-time">
-                                                    <h4>
-                                                        다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회
-                                                    </h4>
-                                                </div>
+                                        <div class="top-item">
+                                            <div class="img-box">
+                                                <a href="">
+                                                    <img src="./images/background/box-01.png" alt="">
+                                                </a>
                                             </div>
-                                            <div class="text-box">
-                                                <div class="text-item">
-                                                    <h5 class="title-text">
-                                                        가격
-                                                    </h5>
-                                                    <p>성인 200,000 원 </p>
-                                                    <p>원 아동 150,000</p>
-                                                    <p> 유아 100,000 원</p>
-                                                </div>
-                                                <div class="text-item">
-                                                    <h5 class="title-text">
-                                                        가격
-                                                    </h5>
-                                                    <p>성인 200,000 원 </p>
-                                                    <p>원 아동 150,000</p>
-                                                    <p> 유아 100,000 원</p>
-                                                </div>
-                                                <div class="text-item">
-                                                    <h5 class="title-text">
-                                                        가격
-                                                    </h5>
-                                                    <p>성인 200,000 원 </p>
-                                                    <p>원 아동 150,000</p>
-                                                    <p> 유아 100,000 원</p>
-                                                </div>
-                                                <div class="text-item">
-                                                    <h5 class="title-text">
-                                                        가격
-                                                    </h5>
-                                                    <p>성인 200,000 원 </p>
-                                                    <p>원 아동 150,000</p>
-                                                    <p> 유아 100,000 원</p>
-                                                </div>
-                                                <div class="text-item">
-                                                    <h5 class="title-text">
-                                                        가격
-                                                    </h5>
-                                                    <p>성인 200,000 원 </p>
-                                                    <p>원 아동 150,000</p>
-                                                    <p> 유아 100,000 원</p>
-                                                </div>
-                                                <div class="text-item">
-                                                    <h5 class="title-text">
-                                                        가격
-                                                    </h5>
-                                                    <p>성인 200,000 원 </p>
-                                                    <p>원 아동 150,000</p>
-                                                    <p> 유아 100,000 원</p>
-                                                </div>
-                                            </div>
-                                            <div class="gr-button">
-                                                <button class="btn btn-detail">세부일정</button>
-                                                <button class="btn btn-before">예약하기</button>
+                                            <div class="date-time">
+                                                <h4>
+                                                    [다낭/빈펄 리버프론트] 조식포함,  studio room -5일  
+                                                </h4>
                                             </div>
                                         </div>
+                                        <div class="text-box">
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    가격
+                                                </h5>
+                                                <p>성인 300,000 원 </p>
+                                                <p>원 아동 150,000</p>
+                                                <p> 유아 100,000 원</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    방문도시  
+                                                </h5>
+                                                <p>다낭 </p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    항공    
+                                                </h5>
+                                               <p>티웨이항공 </p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    일정     
+                                                </h5>
+                                                <p>2박3일</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    출국   
+                                                </h5>
+                                                <p>7월 22일</p>
+                                                <p>(월) 오전 08:45 </p>
+                                                <p>인천/김포 출발</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    귀국 
+                                                </h5>
+                                                <p>7월 24일 (수)</p>
+                                                <p>오전 08:45</p>
+                                                <p>인천/김포 도착</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    쇼핑 
+                                                </h5>
+                                                <p>노쇼핑   </p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    인솔자 
+                                                </h5>
+                                                <p>없음</p>
+                                            </div>
+                                            <div class="text-item">
+                                                <h5 class="title-text">
+                                                    여행사  
+                                                </h5>
+                                                <p>투어2000</p>
+                                            </div>
+                                        </div>
+                                        <div class="gr-button">
+                                            <button class="btn btn-detail">세부일정</button>
+                                            <button class="btn btn-before">예약하기</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
