--- a/src/views/pages/review-go-to.html
+++ b/src/views/pages/review-go-to.html
@@ -75,7 +75,7 @@
                                 <div class="right-review">
                                     <div class="title-review">
                                         <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회></h4>
+                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
                                         </a>
                                     </div>
                                     <div class="star-writing">
@@ -96,7 +96,7 @@
                                 <div class="right-review">
                                     <div class="title-review">
                                         <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회></h4>
+                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
                                         </a>
                                     </div>
                                     <div class="star-writing">
@@ -117,7 +117,7 @@
                                 <div class="right-review">
                                     <div class="title-review">
                                         <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회></h4>
+                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
                                         </a>
                                     </div>
                                     <div class="star-writing">
@@ -138,7 +138,7 @@
                                 <div class="right-review">
                                     <div class="title-review">
                                         <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회></h4>
+                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
                                         </a>
                                     </div>
                                     <div class="star-writing">
@@ -159,7 +159,7 @@
                                 <div class="right-review">
                                     <div class="title-review">
                                         <a href="">
-                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회></h4>
+                                            <h4>다낭 호이안 바나산국립공원 실속팩 5일 + 쇼핑 3회</h4>
                                         </a>
                                     </div>
                                     <div class="star-writing">
