--- a/src/styles/pages/_review-go.scss
+++ b/src/styles/pages/_review-go.scss
@@ -323,4 +323,89 @@
       }
     }
   }
+
+  .write {
+    textarea {
+      background: #f3f3f3;
+      font-size: 18px;
+      color: #8f8f8f;
+      font-weight: bold;
+    }
+  }
+  
+  .add-img {
+    margin-top: 20px;
+    .btn-add-img {
+      width: 90px;
+      height: 90px;
+      border-radius: 5px;
+      background: #c9c9c9;
+      @include transition-3;
+
+      &:hover {
+        background: #454545;
+      }
+
+      i {
+        font-size: 50px;
+        color: #fff;
+      }
+    }
+  }
+
+  .share-sns {
+    margin-top: 40px;
+
+    h4 {
+      font-size: 18px;
+      color: #454545;
+      font-weight: bold;
+      
+      @media screen and (max-width: 480px) {
+       font-size: 16px;
+      }
+    }
+
+    input {
+      height: 46px;
+      padding: 0 15px;
+      font-size: 18px;
+      color: #8f8f8f;
+      font-weight: bold;
+
+      @media screen and (max-width: 480px) {
+        font-size: 16px;
+       }
+    }
+  }
+
+  .button-write {
+    margin: 100px 0;
+
+    @media screen and (max-width: 480px) {
+      margin: 35px 0;
+    }
+
+    .btn-write {
+      height: 46px;
+      color: #fff;
+      font-weight: bold;
+      font-size: 18px;
+      background: #9c2e92;
+      border: 1px solid #9c2e92;
+      width: 60%;
+      margin: 0 auto;
+      display: block;
+      @include transition-3;
+
+      @media screen and (max-width: 480px) {
+        font-size: 16px;
+       }
+
+      &:hover, &:focus {
+        background: transparent;
+        color: #9c2e92;
+      }
+    }
+  }
 }
