--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,7 +33,8 @@
 @import "pages/asian-template";
 @import "pages/tour-schedule";
 @import "pages/success-registration";
-@import "pages/faq";
+@import "pages/booking-schedule";
+@import "pages/question-schedule";
 
 @import "pages/review-go";
 @import "pages/whish-list";
