--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,6 +35,7 @@
 @import "pages/success-registration";
 @import "pages/booking-schedule";
 @import "pages/question-schedule";
+@import "pages/register-advance";
 
 @import "pages/review-go";
 @import "pages/whish-list";
