--- a/src/styles/pages/_question-schedule.scss
+++ b/src/styles/pages/_question-schedule.scss
@@ -38,6 +38,7 @@ $background_1: #f3f3f3;
 			margin-bottom: 25px;
 			width: 100%;
 			background-color: $background_1;
+			height: 50px;
 			&:focus{
 				box-shadow: none;
 			}
