--- a/src/views/pages/html-build.html
+++ b/src/views/pages/html-build.html
@@ -51,12 +51,22 @@
     </li>
     <li class="item">
         <a href="whish-list.html">
-            whish-list.html
+            success_registration.html
         </a>
     </li>
     <li class="item">
-        <a href="">
-           
+        <a href="whish-list.html">
+            question_schedule_2.html
+        </a>
+    </li>
+    <li class="item">
+        <a href="whish-list.html">
+            cancel_registration_information.html
+        </a>
+    </li>
+    <li class="item">
+        <a href="whish-list.html">
+            booking_schedule.html
         </a>
     </li>
 </ul>
