--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -230,3 +230,56 @@ $base-font-size:14;
 @function px2em($pxsize) {
   @return ($pxsize/$base-font-size)+em;
 }
+
+@mixin hover-circle {
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    display: block;
+    content: "";
+    width: 0;
+    height: 0;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    opacity: 0;
+  }
+  &:hover::before {
+    -webkit-animation: circle 0.75s;
+    animation: circle 0.75s;
+  }
+  &:focus::before {
+    -webkit-animation: circle 0.75s;
+    animation: circle 0.75s;
+  }
+
+  @-webkit-keyframes circle {
+    0% {
+      opacity: 1;
+    }
+    40% {
+      opacity: 1;
+    }
+    100% {
+      width: 200%;
+      height: 200%;
+      opacity: 0;
+    }
+  }
+  @keyframes circle {
+    0% {
+      opacity: 1;
+    }
+    40% {
+      opacity: 1;
+    }
+    100% {
+      width: 200%;
+      height: 200%;
+      opacity: 0;
+    }
+  }
+}
