--- a/src/styles/pages/_whish-list.scss
+++ b/src/styles/pages/_whish-list.scss
@@ -48,19 +48,19 @@
     }
 
     .image-box {
+      width: 245px;
+      position: relative;
+      overflow: hidden;
+      @include hover-circle;
+
       img {
-        width: 245px;
+        width: 100%;
         height: 190px;
         border-radius: 15px;
 
         @media screen and (max-width: 480px) {
           width: 100px;
           height: 94px;
-        }
-
-        &:hover, &:focus {
-          background: #454545;
-          opacity: 0.8;
         }
       }
     }
