--- a/src/views/pages/asian-template.html
+++ b/src/views/pages/asian-template.html
@@ -65,7 +65,7 @@
                                 <button class="btn btn-asia">아시아</button>
                             </div>
                             <div class="right">
-                                <button class="btn btn-goto">언제 떠날까요?</button>
+                                <button class="btn btn-goto"  id="get-date" type="button" data-toggle="modal">언제 떠날까요?</button>
                                 <button class="btn btn-goto">
                                     <i class="fas fa-user-alt"></i>
                                     <span class="ml-1">1</span>
@@ -699,6 +699,9 @@
                                     <button class="btn-right btn">100개의 결과 보기 </button>
                                 </div>
                             </div>
+                            <footer class="main_footer">
+                                @@include('../layouts/footer.html')
+                            </footer>
                         </div>
                         <!-- end -->
 
@@ -729,8 +732,35 @@
                                     <p>호주 환런</p>
                                 </div>
                             </div>
+                            <footer class="main_footer">
+                                @@include('../layouts/footer.html')
+                            </footer>
                         </div>
                         <!-- end -->
+
+                        <!-- popup date-time -->
+                        <div class="popup-datetime">
+                            <div class="header-popup">
+                                <div class="row">
+                                    <div class="col-md-12 d-flex justify-content-end">
+                                        <span class="btnds " id="close_date">
+                                            <i class="fas fa-times"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="popup-content">
+                               <h4 class="title-date">
+                                출발일자를 선택해 주세요  
+                               </h4>
+                               <div class="content-popup"></div>
+                            </div>
+                            <footer class="main_footer">
+                                @@include('../layouts/footer.html')
+                            </footer>
+                        </div>
+                        <!-- end -->
+
                         <div class="card-group">
                             <div class="row mb-4">
                                 <div class="col-sm-6">
