--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,7 @@
 @import "pages/booking-schedule";
 @import "pages/question-schedule";
 @import "pages/register-advance";
+@import "pages/answer-question";
 
 @import "pages/review-go";
 @import "pages/whish-list";
