--- a/src/styles/pages/_success-registration.scss
+++ b/src/styles/pages/_success-registration.scss
@@ -12,6 +12,9 @@
 		.text_content{
 			padding: 0 30px;
 			margin-top: 90px;
+			@media only screen and (max-width: 480px) {
+				padding: 0 10px;
+			}
 			h4{
 				text-align: left;
 				font-weight: 600;
@@ -49,6 +52,27 @@
 					font-size: 16px;
 					@media only screen and (max-width: 480px) {
 						font-size: 14px;
+					}
+				}
+			}
+			.wrapper_btn{
+				margin-bottom: 30px;
+				display: flex;
+				justify-content: space-around;
+				button{
+					padding: 15px 0px;
+					width: 45%;
+					background: #9c2e92;
+					color: #fff;
+					font-size: 18px;
+					font-weight: 600;
+					&:focus{
+						background: #fff;
+						color: #9c2e92;
+					}
+					&:active{
+						background: #fff;
+						color: #9c2e92;
 					}
 				}
 			}
