--- a/src/views/pages/answer_question.html
+++ b/src/views/pages/answer_question.html
@@ -51,28 +51,141 @@
                 </div>
                 @@include('../layouts/header.html')
                 <section>
-                    <div class="wrapper_faq">
-                        <div class="card">
-                            <div class="card-title">
-                                
+                    <div class="content">
+                        <div class="wrapper_faq">
+                            <div class="accordion">
+                                <div class="card_accordion">
+                                    <div class="card_header"  data-show='01'>
+                                        <span data-toggle="collapse">
+                                            자주하는 질문
+                                        </span>
+                                    </div>
+                                    <div class="collapse"  id="collapse_01">
+                                        <div class="card_body">
+
+                                         <div class="card_sub_accordion">
+                                            <div class="card_sub_header"  data-show='sub_01'>
+                                                <span data-toggle="collapse" >
+                                                    예약은 어떻게 확인하나요?  
+                                                </span><i class="fas fa-chevron-right"></i>
+                                            </div>
+                                            <div class="collapse"  id="collapse_sub_01">
+                                                <div class="card_sub_body">
+                                                    예약하고 싶은 상품 하단에 예약 신청 버튼을 누르신 후, 여행자 정보를 간단히 입력 후 완료 버튼을 눌러주시면 가예약이 완료됩니다.해당 예약 단계에서는 결제는 이뤄지지 않습니다.예약이 완료된 고객님들에게는 해당 여행사 담당자가 순차적으로 연락을 드려 여행진행을 안내드리고 있습니다.*상품은 실시간 가격 및 이용 가능 인원 변동이 발생할 수 있으니 참고해주시기 바랍니다.
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="card_sub_accordion">
+                                            <div class="card_sub_header"  data-show='sub_02'>
+                                                <span data-toggle="collapse" >
+                                                    예약은 어떻게 확인하나요?  
+                                                </span><i class="fas fa-chevron-right"></i>
+                                            </div>
+                                            <div class="collapse"  id="collapse_sub_02">
+                                                <div class="card_sub_body">
+                                                    Lorem ipsum..
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="card_sub_accordion">
+                                            <div class="card_sub_header"  data-show='sub_03'>
+                                                <span data-toggle="collapse" >
+                                                    결제는 어떻게 하나요?  
+                                                </span><i class="fas fa-chevron-right"></i>
+                                            </div>
+                                            <div class="collapse"  id="collapse_sub_03">
+                                                <div class="card_sub_body">
+                                                    Lorem ipsum..
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="card_sub_accordion">
+                                            <div class="card_sub_header"  data-show='sub_04'>
+                                                <span data-toggle="collapse" >
+                                                    항공권만 구매가 가능한가요?
+                                                </span><i class="fas fa-chevron-right"></i>
+                                            </div>
+                                            <div class="collapse"  id="collapse_sub_04">
+                                                <div class="card_sub_body">
+                                                    Lorem ipsum..
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="card_sub_accordion">
+                                            <div class="card_sub_header"  data-show='sub_05'>
+                                                <span data-toggle="collapse" >
+                                                    아동/유아 기준 및 금액이 궁금해요 
+                                                </span><i class="fas fa-chevron-right"></i>
+                                            </div>
+                                            <div class="collapse"  id="collapse_sub_05">
+                                                <div class="card_sub_body">
+                                                    Lorem ipsum..
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="card_sub_accordion">
+                                            <div class="card_sub_header"  data-show='sub_06'>
+                                                <span data-toggle="collapse" >
+                                                    혼자 가고 싶은데 추가 비용이 있나요?  
+                                                </span><i class="fas fa-chevron-right"></i>
+                                            </div>
+                                            <div class="collapse"  id="collapse_sub_06">
+                                                <div class="card_sub_body">
+                                                    Lorem ipsum..
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-body">
-                                
+                            <div class="card_accordion">
+                                <div class="card_header" data-show='02'>
+                                    <span class="collapsed card-link" data-toggle="collapse" >
+                                     예약 및 출발
+                                 </span>
+                             </div>
+                             <div class="collapse"  id="collapse_02">
+                                <div class="card_body">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card_accordion">
+                            <div class="card_header" data-show='03'>
+                                <span class="collapsed card-link" data-toggle="collapse" >
+                                    예약 방법/결제
+                                </span>
+                            </div>
+                            <div class="collapse" id="collapse_03"> 
+                                <div class="card_body">
+                                    Lorem ipsum..
+                                </div>
                             </div>
                         </div>
                     </div>
-                </section>
-                <footer class="main_footer">
-                    @@include('../layouts/footer.html')
-                </footer>
+                </div>
             </div>
-        </main>
-
-        <!-- include footer.html -->
+        </section>
+        <footer class="main_footer">
+            @@include('../layouts/footer.html')
+        </footer>
     </div>
+</main>
 
-    <!-- include scripts.html -->
-    @@include('../layouts/scripts.html')
+<!-- include footer.html -->
+</div>
+
+<!-- include scripts.html -->
+@@include('../layouts/scripts.html')
+<script type="text/javascript">
+
+</script>
 
 </body>
 </html>
