--- a/src/styles/pages/_answer-question.scss
+++ b/src/styles/pages/_answer-question.scss
@@ -31,6 +31,13 @@
 					display: flex;
 					justify-content: space-between;
 					cursor: pointer;
+					i{
+
+						width: 20px;
+						height: 20px;
+						transition: all .3s ease-in-out 0s;
+						// transform: rotate(0);
+					}
 					span{
 						padding: 10px 0;
 						font-size: 18px;
@@ -46,7 +53,7 @@
 	}
 }
 .card_sub_header.active{
-	i{
+	i {
 		transition: all .3s ease-in-out 0s;
 		transform: rotate(90deg);
 	}
