--- a/src/views/pages/question_schedule.html
+++ b/src/views/pages/question_schedule.html
@@ -79,24 +79,39 @@
                             </div>
                             <p>문의사항 등록 시 <span class="tag_question"><a href="">개인정보 수집 및 이용</a></span>에 동의하는 것으로 간주됩니다.</p>
                             <div class="wrapper_btn_question">
-                                <button>
+                                <button type="button" data-toggle="modal" data-target="#question_schedule" class="btn">
                                     문의
                                 </button>
                             </div>
                         </div>
                     </div>
-                </section>
-                <footer class="main_footer">
-                    @@include('../layouts/footer.html')
-                </footer>
-            </div>
-        </main>
+                    <div class="modal" id="question_schedule">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header border-0">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                </div>
 
-        <!-- include footer.html -->
+                                <!-- Modal body -->
+                                <div class="modal-body popup_content">
+                                    <img src="../../images/background/bg_nofitication.png">
+                                    <p>에 동의하는 것으로 간주됩니다.</p>
+                                </div>
+                       </div>
+                        </div>
+                    </div>
+        </section>
+        <footer class="main_footer">
+            @@include('../layouts/footer.html')
+        </footer>
     </div>
+</main>
 
-    <!-- include scripts.html -->
-    @@include('../layouts/scripts.html')
+<!-- include footer.html -->
+</div>
+
+<!-- include scripts.html -->
+@@include('../layouts/scripts.html')
 
 </body>
 </html>
