--- a/src/styles/pages/_question-schedule.scss
+++ b/src/styles/pages/_question-schedule.scss
@@ -88,3 +88,22 @@ $background_1: #f3f3f3;
 	}
 
 }
+#question_schedule{
+	.popup_content{
+		text-align: center;
+		img{
+			margin: 0 auto;
+			@media only screen and (max-width: 480px) {
+				width: 80px;
+			}
+		}
+		p{
+			padding: 30px 0; 
+			font-weight: 600;
+			font-size: 18px;
+			@media only screen and (max-width: 480px) {
+				font-size: 16px;
+			}
+		}
+	}
+}
