--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -404,9 +404,20 @@ $background_color_2: inherit;
     }
 }
 @media only screen and (max-width: 480px) {
+    .logo_banner {
+        margin-top: 60px;
+        img{
+            width: 75px;
+            height: 55px;
+        }
+    }
+    .banner{
+        margin-bottom: 1em;
+    }
     .show_local {
           .list_item {
             width: 100%;
+            height: 180px;
         }
     }
     .navbar .title_header {
@@ -421,33 +432,58 @@ $background_color_2: inherit;
             height: 60px;
         }
     }
-
-    .control_form_search {
-        &:after {
-            width: 25px;
-            height: 25px;
-        }
-        .input_key_search {
-            margin-left: 25px;
-            padding: 2px 10px;
+    .owl-carousel {
+        margin-bottom: 1em;
+        .item {
+            img{
+                height: 180px;
+                background-position: center;
+                background-size: cover;
+                background-position-y: center;
+            }
+            h4{
+                top: 45%;
+            }
         }
     }
+    .control_form_search {
+        padding-right: 0;
+        &:after {
+            width: 15px;
+            height: 16px;
+        }
+        .input_key_search {
+            margin-left: 20px;
+            padding: 0;
+        }
+    }
+    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+        font-size: 10px;
+    }
+
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+        font-size: 10px;
+    }
+
+    ::-ms-input-placeholder { /* Microsoft Edge */
+        font-size: 10px;
+    }
     .control_form_search.input_control_left {
-        margin-bottom: 1em; 
+        // margin-bottom: 1em; 
         &:before {
-         width: 25px;
-         height: 25px;
+         width: 15px;
+         height: 16px;
         }
     }
     .control_form_search.input_control_right {
         &:before {
-          width: 25px;
-          height: 27px;
+          width: 15px;
+         height: 16px;
         }
     }
     .list_tags_more {
         ul {
-            padding: 20px 0;
+            padding: 5px 0;
             margin: 0 auto;
             max-width: 100%;
             li {
@@ -456,7 +492,8 @@ $background_color_2: inherit;
                 list-style: none;
                 display: inline-block;
                 a {
-                    padding: 5px 25px 5px 5px;
+                    font-size: 12px;
+                    padding: 0 15px 0 5px;
                     border-radius: 15px;
                     background: #fff;
                     border: 1px solid #d7d7d7;
@@ -471,6 +508,7 @@ $background_color_2: inherit;
                         content: 'x';
                         position: absolute;
                         right: 5px;
+                        top: -3px;
                     }
                     &:hover {
                         background: #9c2e92;
